applications/whoami/http-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: whoami-http-redirect
  namespace: whoami
spec:
  parentRefs:
    - name: public
      namespace: envoy-gateway-system
      sectionName: http
  hostnames:
    - whoami.k8s.749rmw.com
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            port: 443
            statusCode: 301
