applications/whoami/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: whoami
  namespace: whoami
spec:
  parentRefs:
    - name: public
      namespace: envoy-gateway-system
  hostnames:
    - whoami.k8s.749rmw.com
  rules:
    - backendRefs:
        - name: whoami
          port: 80
